# Condor-Buddy

./: README.md  pyproject.toml
.github/workflows/: main_condorbuddy.yml
src/condor_buddy/: __init__.py
