[project]
name = "condor-buddy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "develmusa", email = "contact@develmusa.digital" }
]
dependencies = [
    "discord-py>=2.4.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/condor_buddy"]
